--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 beautifulsoup4==4.12.3
-requests==2.32.3
+Requests==2.32.3
 selenium==4.27.1
 streamlit==1.41.1
-webdriver_manager==4.0.3  
+webdriver_manager==4.0.2
